Added Bootstrap datetimePicker version 3 for Time selection

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/MyAccount.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/MyAccount.cshtml
@@ -4,8 +4,8 @@
 	Layout = "~/Views/Shared/_Layout.cshtml";
 	ViewBag.Title = "MyAccount";
 }
-	<link href="~/Content/bootstrap-datepicker.standalone.min.css" rel="stylesheet" />
-	<script src="~/Scripts/bootstrap-datepicker.min.js"></script>
+	@*<link href="~/Content/bootstrap-datepicker.standalone.min.css" rel="stylesheet" />
+	<script src="~/Scripts/bootstrap-datepicker.min.js"></script>*@
 	<style>
 		.requiredA:after {
 			content: " *";
