Datetimepicker issue fixed

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/_AddEvent.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/_AddEvent.cshtml
@@ -187,11 +187,11 @@
 		//$('#datetimepicker1').datetimepicker();
 		var dateNow = new Date();
 		$("#StartTime").datetimepicker({
-			format: 'LT'
+			format: 'HH:mm'
 		});
 
 		$("#EndTime").datetimepicker({
-			format: 'LT'
+			format: 'HH:mm'
 		});
 
 	});
